Fix gap void between icon and text in the icons

--- a/src/viewer/viewer.scss
+++ b/src/viewer/viewer.scss
@@ -11,6 +11,7 @@
       .tool {
         display: inline-block;
         text-align: -webkit-center;
+        cursor: pointer;
 
         &.active {
           a {
